--- a/src/styles/Story.module.css
+++ b/src/styles/Story.module.css
@@ -32,7 +32,7 @@
 }
 
 .storyText p:first-child::before {
-  content: " \A";
+  content: " \A\A";
   white-space: pre;
 }
 
